# idefics-nnx

./: pyproject.toml
.github/workflows/: python.yml
src/: __init__.py  modules.py
src/idefics2/: vision.py
tests/: conftest.py  test_modules.py
tests/idefics2/: test_vision.py
